--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - test
 
 before_script:
+  - apt-get install -y locales
   - echo "en_US UTF-8" > /etc/locale.gen
   - locale-gen en_US.UTF-8
   - export LANG=en_US.UTF-8
